--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
     <link rel="icon" href="/img/pokebal.png" type="image/x-icon">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-
-    <!-- css custom style -->
     <link rel="stylesheet" href="/css/standard.css">
     <link rel="stylesheet" href="/css/assets.css">
     <link rel="stylesheet" href="/css/style.css">
-
 </head>
 
 <body onload="init()">
@@ -26,21 +22,17 @@
             <img class="pokemon-title" src="/img/pokemon.png" alt="Pokemon-Titel">
             <div class="search-button"></div>
             <input class="search-input" type="text" placeholder="Search..." maxlength="3" onkeyup="searchPokemon()">
-            <!-- Funktion wird bei Eingabe aufgerufen -->
         </div>
     </header>
-    <div class="pokedex-container">
-        <!-- plant type -->
+    <div id="pokemon-container" class="pokedex-container">
+
         <div class="pokemon-row">
-            <!-- Beispiel für Pflanzen-Pokémon -->
             <div class="pokemon-row">
-                <!-- Beispiel für Pflanzen-Pokémon -->
                 <div class="pokemon-card type-plant" data-pokemon="Bisasam" onclick="showPokemonOverlay(this)">
                     <img src="/img/bisasam.png" alt="Bisasam">
                     <p class="pokemon-name">Bisasam</p>
                 </div>
-            </div>            
-        
+            </div>
 
             <div class="pokemon-card type-plant" data-pokemon="Endivie" onclick="showPokemonOverlay(this)">
                 <img src="/img/endivie.png" alt="Endivie">
@@ -55,8 +47,6 @@
                 <p>Kokowei</p>
             </div>
         </div>
-
-        <!-- water type -->
         <div class="pokemon-row">
             <div class="pokemon-card type-water" data-pokemon="Schiggy" onclick="showPokemonOverlay(this)">
                 <img src="/img/schiggy.png" alt="Schiggy">
@@ -75,8 +65,6 @@
                 <p>Sterndu</p>
             </div>
         </div>
-
-        <!-- fire type -->
         <div class="pokemon-row">
             <div class="pokemon-card type-fire" data-pokemon="Glumanda" onclick="showPokemonOverlay(this)">
                 <img src="/img/glumanda.png" alt="Glumanda">
@@ -95,8 +83,6 @@
                 <p>Hunduster</p>
             </div>
         </div>
-
-        <!-- electric type -->
         <div class="pokemon-row">
             <div class="pokemon-card type-electric" data-pokemon="Pikachu" onclick="showPokemonOverlay(this)">
                 <img src="/img/pikachu.png" alt="Pikachu">
@@ -115,8 +101,6 @@
                 <p>Voltobal</p>
             </div>
         </div>
-
-        <!-- rock type -->
         <div class="pokemon-row">
             <div class="pokemon-card type-rock" data-pokemon="Kleinstein" onclick="showPokemonOverlay(this)">
                 <img src="/img/kleinstein.png" alt="Kleinstein">
@@ -136,7 +120,9 @@
             </div>
         </div>
     </div>
-    </div>
+    <button id="load-more-button">Mehr Pokémon laden</button>
+    <div id="spinner" class="spinner" style="display: none;">
+        <img src="/img/spinner.png" alt="Laden...">
     </div>
     <footer class="footer-container">
         <div class="footer-content">
@@ -145,12 +131,9 @@
         </div>
     </footer>
 
-    <!-- js custom style -->
     <script src="./js/api.js"></script>
-    <script src="./js/functions.js"></script>
-    <script src="./js/object.js"></script>
-    <script src="./js/templates.js"></script>
     <script src="./js/script.js"></script>
+    <script src="./js/functions.js"></script>
 
 </body>
 
