--- a/index.html
+++ b/index.html
@@ -11,150 +11,55 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/standard.css">
-    <link rel="stylesheet" href="/css/assets.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/standard.css">
+    <link rel="stylesheet" href="./css/assets.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body onload="init()">
     <header class="header-container">
         <div class="header-content">
-            <img class="pokemon-title" src="/img/pokemon.png" alt="Pokemon-Titel">
-            <div class="search-button"></div>
-            <input class="search-input" type="text" placeholder="Search..." maxlength="3" onkeyup="searchPokemon()">
+            <img class="pokemon-title" src="./img/pokemon.png" alt="Pokemon-Titel">
+            <input class="search-input" type="text" placeholder="Search..." oninput="searchPokemon()" />
         </div>
     </header>
-    <div id="pokemon-container" class="pokedex-container pokemon-row">
-        <div class="pokemon-row-plant">
-            <div class="pokemon-card type-plant" data-pokemon="Bisasam" onclick="showPokemonOverlay(this)">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png"
-                    alt="Bisasam">
-                <p class="pokemon-name">Bisasam</p>
-            </div>
-            <div class="pokemon-card type-plant" data-pokemon="Endivie" onclick="showPokemonOverlay(this)">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/152.png"
-                    alt="Endivie">
-                <p>Endivie</p>
-            </div>
-            <div class="pokemon-card type-plant" data-pokemon="Knofensa" onclick="showPokemonOverlay(this)">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/69.png"
-                    alt="Knofensa">
-                <p>Knofensa</p>
-            </div>
-            <div class="pokemon-card type-plant" data-pokemon="Kokowei" onclick="showPokemonOverlay(this)">
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/103.png"
-                    alt="Kokowei">
-                <p>Kokowei</p>
-            </div>
-            <div class="pokemon-row-water">
-                <div class="pokemon-card type-water" data-pokemon="Schiggy" onclick="showPokemonOverlay(this)">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/7.png"
-                        alt="Schiggy">
-                    <p>Schiggy</p>
-                </div>
-                <div class="pokemon-card type-water" data-pokemon="Krabby" onclick="showPokemonOverlay(this)">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/98.png"
-                        alt="Krabby">
-                    <p>Krabby</p>
-                </div>
-                <div class="pokemon-card type-water" data-pokemon="Enton" onclick="showPokemonOverlay(this)">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/54.png"
-                        alt="Enton">
-                    <p>Enton</p>
-                </div>
-                <div class="pokemon-card type-water" data-pokemon="Sterndu" onclick="showPokemonOverlay(this)">
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/120.png"
-                        alt="Sterndu">
-                    <p>Sterndu</p>
-                </div>
+    <div id="pokemon-container" class="pokemon-row"></div>
+    <button id="load-more-button" class="load-more-btn">Mehr Pokémon laden</button>
+    <div id="spinner" class="spinner-btn"></div>
 
-                <div class="pokemon-row-fire">
-                    <div class="pokemon-card type-fire" data-pokemon="Glumanda" onclick="showPokemonOverlay(this)">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png"
-                            alt="Glumanda">
-                        <p>Glumanda</p>
+    <div id="pokemon-overlay" class="#pokemon-overlay">
+        <div class="overlay-content">
+            <button class="close-button" onclick="closeOverlay()">X</button>
+            <div class="image-container">
+                <img id="overlay-image" alt="pokemon-image" />
+            </div>
+            <div class="info-container">
+                <h2 id="overlay-name">Pokémon Name</h2>
+                <div class="category-buttons">
+                    <button class="category-button" onclick="showCategoryContent('main')">Main</button>
+                    <button class="category-button" onclick="showCategoryContent('stats')">Stats</button>
+                    <button class="category-button" onclick="showCategoryContent('evo-chain')">Evo Chain</button>
+                </div>
+                <div class="category-content">
+                    <div id="main-content" class="content-section active">
+                        <p id="overlay-type">Type: </p>
+                        <p id="overlay-height">Height: </p>
+                        <p id="overlay-weight">Weight: </p>
                     </div>
-                    <div class="pokemon-card type-fire" data-pokemon="Vulpix" onclick="showPokemonOverlay(this)">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/37.png"
-                            alt="Vulpix">
-                        <p>Vulpix</p>
+                    <div id="stats-content" class="content-section">
+                        <!-- Stats content will be dynamically generated -->
                     </div>
-                    <div class="pokemon-card type-fire" data-pokemon="Fukano" onclick="showPokemonOverlay(this)">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/58.png"
-                            alt="Fukano">
-                        <p>Fukano</p>
+                    <div id="evo-chain-content" class="content-section">
+                        <p>Loading evolution chain...</p>
                     </div>
-                    <div class="pokemon-card type-fire" data-pokemon="Hunduster" onclick="showPokemonOverlay(this)">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/228.png"
-                            alt="Hunduster">
-                        <p>Hunduster</p>
-                    </div>
-                    <div class="pokemon-row-electric">
-                        <div class="pokemon-card type-electric" data-pokemon="Pikachu"
-                            onclick="showPokemonOverlay(this)">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png"
-                                alt="Pikachu">
-                            <p>Pikachu</p>
-                        </div>
-                        <div class="pokemon-card type-electric" data-pokemon="Blitza"
-                            onclick="showPokemonOverlay(this)">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/135.png"
-                                alt="Blitza">
-                            <p>Blitza</p>
-                        </div>
-                        <div class="pokemon-card type-electric" data-pokemon="Magnetilo"
-                            onclick="showPokemonOverlay(this)">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/81.png"
-                                alt="Magnetilo">
-                            <p>Magnetilo</p>
-                        </div>
-                        <div class="pokemon-card type-electric" data-pokemon="Voltobal"
-                            onclick="showPokemonOverlay(this)">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/100.png"
-                                alt="Voltobal">
-                            <p>Voltobal</p>
-                        </div>
-                        <div class="pokemon-row-rock">
-                            <div class="pokemon-card type-rock" data-pokemon="Kleinstein"
-                                onclick="showPokemonOverlay(this)">
-                                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/74.png"
-                                    alt="Kleinstein">
-                                <p>Kleinstein</p>
-                            </div>
-                            <div class="pokemon-card type-rock" data-pokemon="Kabuto"
-                                onclick="showPokemonOverlay(this)">
-                                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/140.png"
-                                    alt="Kabuto">
-                                <p>Kabuto</p>
-                            </div>
-                            <div class="pokemon-card type-rock" data-pokemon="Digda" onclick="showPokemonOverlay(this)">
-                                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/50.png"
-                                    alt="Digda">
-                                <p>Digda</p>
-                            </div>
-                            <div class="pokemon-card type-rock" data-pokemon="Onyx" onclick="showPokemonOverlay(this)">
-                                <img src="/img/onyx.png" alt="Onyx">
-                                <p>Onyx</p>
-                            </div>
-                            <div class="pokemon-row">
-                            </div>
-                            <button id="load-more-button">Mehr Pokémon laden</button>
-                            <div id="spinner" class="spinner-btn">
-                            </div>
-                        </div>
-                        <div>
-                            <footer class="footer-container">
-                                <div class="footer-content">
-                                    <img src="/img/pokebal.png" alt="Pokeball" class="footer-logo">
-                                    <p class="footer-text">Pokémon Scout – Leo Rullani</p>
-                                </div>
-                        </div>
-                        </footer>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                        <script src="./js/api.js"></script>
-                        <script src="./js/script.js"></script>
-                        <script src="./js/functions.js"></script>
-
+    <script src="./js/api.js"></script>
+    <script src="./js/functions.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
